--- a/styles.css
+++ b/styles.css
@@ -105,8 +105,8 @@ h2 {
     width: 100%;
     max-width: 250px;
     height: auto;
-    /* border-radius: 50%; */
-    /* border: 5px solid rgba(255, 255, 255, 0.5); */
+    border-radius: 50%;
+    border: 5px solid rgba(255, 255, 255, 0.5);
     transition: transform 0.3s;
 }
 
