--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,26 @@ h2 {
     text-align: left;
 }
 
+.btn {
+    padding: 15px 15px;
+    margin: 25px 0px;
+    text-align: center;
+    color: #ff6347;
+    background-color: #333;
+    cursor: pointer;
+    border: none;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: .1em;
+    font-size: 1em;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+}
+
 .skills-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
@@ -178,9 +198,12 @@ h2 {
     width: 100%;
     border-radius: 10px;
     margin-bottom: 15px;
+    cursor: pointer;
 }
 
 .project-details h3 {
+    text-align: center;
+    margin-bottom: 10px;
     color: #ff6347;
 }
 
