--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/* General Styles */
-
 * {
     margin: 0;
     padding: 0;
@@ -8,7 +6,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background: #121212;
+    background: #0c1a25;
     color: #fff;
     scroll-behavior: smooth;
 }
@@ -17,8 +15,10 @@ h1, h2, h3 {
     font-family: 'Josefin Sans', sans-serif;
 }
 
+/* ------------- Header Section -------------- */
+
 header {
-    background: #333;
+    background: #0c1a25;
     position: fixed;
     width: 100%;
     top: 0;
@@ -37,7 +37,7 @@ header {
 }
 
 .name {
-    color: #ff6347;
+    color: #00f0ff;
     margin: 0;
 }
 
@@ -55,7 +55,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #ff6347;
+    color: #00f0ff;
 }
 
 .section {
@@ -70,9 +70,22 @@ nav ul li a:hover {
 }
 
 h2 {
-    color: #ff6347;
+    color: #00f0ff;
     margin-bottom: 30px;
+    font-size: 50px;
+    border-bottom: 2px solid #fff;
+    display: inline-block;
+    text-transform: uppercase;
 }
+
+h3 {
+    color: #00f0ff;
+    font-size: 25px;
+    margin-bottom: 20px;
+}
+
+
+/* -------------------- Home Section --------------------- */
 
 .home-container {
     display: flex;
@@ -93,7 +106,7 @@ h2 {
 }
 
 .summary span {
-    color: #ff6347;
+    color: #00f0ff;
 }
 
 .home-right {
@@ -102,11 +115,13 @@ h2 {
 }
 
 .user-image {
-    width: 100%;
-    max-width: 250px;
+    width: 400px;
     height: auto;
     border-radius: 50%;
-    border: 5px solid rgba(255, 255, 255, 0.5);
+    box-shadow: 0 0 30px 10px rgba(0, 240, 255, 0.7);
+    border: 10px solid #0c1a25;
+    background: linear-gradient(145deg, #00f0ff, #7600ff);
+    padding: 5px;
     transition: transform 0.3s;
 }
 
@@ -114,9 +129,11 @@ h2 {
     transform: scale(1.1);
 }
 
+/* ----------------------- About Section ---------------------- */
+
 .about-content {
     display: flex;
-    gap: 30px;
+    gap: 100px;
     flex-wrap: wrap;
 }
 
@@ -127,20 +144,36 @@ h2 {
 .about-image img {
     max-width: 100%;
     height: auto;
-    border-radius: 10px;
+    border-radius: 50px;
+    box-shadow: 0 0 30px 10px rgba(0, 240, 255, 0.7);
+    border: 10px solid #0c1a25;
+    background: linear-gradient(145deg, #00f0ff, #7600ff);
+    padding: 5px;
+    transition: transform 0.3s;
 }
+
+/* .about-image:hover {
+    transform: scale(1.1);
+} */
 
 .about-text {
     flex: 2;
-    text-align: left;
+    text-align: center;
 }
+
+.about-text p {
+    flex: 2;
+    text-align: justify;
+}
+
+
 
 .btn {
     padding: 15px 15px;
     margin: 25px 0px;
     text-align: center;
-    color: #ff6347;
-    background-color: #333;
+    color: #ffffff;
+    background-color: #112233;
     cursor: pointer;
     border: none;
     text-transform: uppercase;
@@ -154,13 +187,18 @@ h2 {
 
 .btn:hover {
     transform: scale(1.1);
+    background-color: #233d56;
 }
 
+
+/* ---------------------- Skill section ------------------- */
+
 .skills-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    gap: 20px;
-    justify-items: center;
+    display: grid; 
+    grid-template-columns: repeat(6, 1fr); 
+    /* grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
+    gap: 20px; 
+    justify-items: center; 
 }
 
 .skill-item {
@@ -177,6 +215,10 @@ h2 {
     height: 75px;
 }
 
+
+
+/* -------------------- Project Section -----------------  */
+
 .projects-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -184,7 +226,7 @@ h2 {
 }
 
 .project {
-    background-color: #333;
+    background-color: #112233;
     padding: 20px;
     border-radius: 10px;
     text-align: left;
@@ -202,35 +244,105 @@ h2 {
     cursor: pointer;
 }
 
-.project-details h3 {
-    text-align: center;
+.project a h3 {
     margin-bottom: 10px;
-    color: #ff6347;
+    color: #00f0ff;
+    text-align: center;
 }
 
 .project-details p {
     color: #ffffff;
 }
 
-.social-links {
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-}
 
-.social-links a {
-    color: #ff6347;
-    text-decoration: none;
-    font-weight: 500;
-    transition: color 0.3s;
-}
+/* --------------------- Contact Section -------------- */
 
-.social-links a:hover {
+.contact {
+    padding: 100px 80px;
+    background-color: #0c1a25;
     color: #ffffff;
-}
+  }
+  
+  .contact-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+  }
+  
+  .contact-info {
+    max-width: 45%;
+  }
+  
+
+  
+  .contact-info h2 span {
+    color: #00f0ff;
+  }
+  
+  .contact-info p {
+    font-size: 16px;
+    margin-bottom: 15px;
+    color: #c4c4c4;
+  }
+  
+  .contact-info p strong {
+    color: #ffffff;
+  }
+  
+  .social-links a {
+    font-size: 24px;
+    color: #00f0ff;
+    margin-right: 15px;
+    transition: color 0.3s ease;
+  }
+  
+  .social-links a:hover {
+    color: #00cce7;
+    transform: scale(1.1);
+  }
+  
+  .contact-form {
+    max-width: 45%;
+    width: 100%;
+  }
+  
+  .contact-form input, .contact-form textarea {
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 15px;
+    border-radius: 10px;
+    border: none;
+    background-color: #112233;
+    color: #ffffff;
+    font-size: 16px;
+  }
+  
+  .contact-form textarea {
+    height: 150px;
+    resize: none;
+  }
+  
+  .contact-form .btn {
+    width: 100%;
+    padding: 15px 20px;
+    background-color: #112233;
+    color: #ffffff;
+    border: none;
+    border-radius: 25px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: transform 0.3s;
+  }
+  
+  .contact-form .btn:hover {
+    transform: scale(1.1);
+    background-color: #233d56;
+  }
+  
 
 footer {
-    background: #222;
+    background: #112233;
     padding: 20px 0;
 }
 
